--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   "engines": {
     "node": "0.12.x"
   },
+  "config": {
+    "sweet": {
+      "in": "src/*.js",
+      "out": "lib/index.js"
+    }
+  },
+  "main": "$npm_package_config_sweet_out",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "nodemon -w src -w test -x 'npm run build && npm run test'",
+    "build": "mkdir -p lib && sjs -m lambda-chop/macros -o $npm_package_config_sweet_out $npm_package_config_sweet_in"
   },
   "keywords": [
     "calendar",
@@ -27,6 +36,10 @@
     "moment": "^2.10.6"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "chai": "^3.2.0",
+    "lambda-chop": "^0.1.5",
+    "mocha": "^2.2.5",
+    "nodemon": "^1.4.0",
+    "sweet.js": "^0.7.4"
   }
 }
