--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   ],
   "dependencies": {
     "lodash": "^3.10.1",
+    "lodash.identity": "^3.0.0",
+    "lodash.range": "^3.0.1",
     "moment": "^2.10.6"
   },
   "devDependencies": {
